# bq-extraction

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: atlas_graph_core_followup.md  full_graph_workflow.md
notebooks/: explorer.ipynb
sample_output/: column_descriptions.json  columns.json  datasets.json  ddls.json  frequent_queries.json  query_logs.json  query_sources.json  table_access.json  user_stats.json
scripts/: build_lineage.py  extract.py  extract.sh  seed_data.sh  seed_queries.sh
src/bq_extraction/: __init__.py  atlas_export.py  config.py  extractor.py  full_graph_export.py  graph_transforms.py  lineage.py  loader.py  service.py  writer.py
src/bq_extraction_demo/: __init__.py  config.py  contract.py  extractor.py  service.py  writer.py
terraform/: main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
tests/: __init__.py  test_atlas_export.py  test_config.py  test_extractor.py  test_full_graph_export.py  test_lineage.py  test_service.py  test_smoke.py
